--- a/andromaxlogin.css
+++ b/andromaxlogin.css
@@ -1,84 +1,96 @@
+* {
+    background-size: contain;
+    font-family: 'Dosis', sans-serif;
+}
 
-body{
-    --color-primary : #3a93b9;
-    --color-primary-dark : #afafaf;
+body {
+    --color-primary: #3a93b9;
+    --color-primary-dark: rgb(0, 121, 90);
     --color-secondary: #000000;
-    --color-error : #cc3333;
-    --color-success : #4bb544;
+    --color-error: #cc3333;
+    --color-success: #4bb544;
     --border-radius: 4px;
+   
 
     margin: 0;
     height: 100vh;
     display: flex;
     flex-direction: column;
     font-size: 18px;
-    background:  var(--color-primary-dark) ;
-    background-size: contain;
-    font-family: 'Dosis', sans-serif;;
 }
-.heads{
-    background-color: #278dd1;
+main{
+     background-image: url("images/banner-background-1.jpg");
+     backface-visibility: visible;
+     background-size: cover;
+     background-repeat: no-repeat;
+     background-position: contain;
 }
 
-h1{
+.heads {
+    background-color: var(--color-primary);
+}
+
+h1 {
     text-align: center;
     font-size: 50px;
     font-weight: bolder;
 }
 
-.container{
+.container {
     width: 300px;
     max-width: 400px;
     margin: 1rem;
     padding: 2rem;
     box-shadow: 0 0 40px rgba(158, 157, 157, 0.2);
     border-radius: var(--border-radius);
-    background: #176151;
-    margin-left: 500px;
+    background: #173d61;
+    margin-left: 530px;
 }
 
 .container,
 .form__input,
-.form__button{
+.form__button {
     font: 500 1rem 'Dosis', sans-serif;
 }
 
-.form--hidden{
+.form--hidden {
     display: none;
 }
 
-.form >* :first-child{
+.form > *:first-child {
     margin-top: 0;
 }
 
-.form >*:last-child{
+.form > *:last-child {
     margin-bottom: 0;
 }
 
-.form__title{
-        margin-bottom: 2rem ;
-        text-align: center;
-        font-weight: lighter;
+.form__title {
+    margin-bottom: 2rem;
+    text-align: center;
+    font-weight: lighter;
 }
 
-.form__message{
+.form__message {
     text-align: center;
     margin-bottom: 1rem;
 }
 
-.form__message--success{
+.form__message--success {
     color: var(--color-success);
 }
 
-.form__message--error{
+.form__message--error {
     color: var(--color-error);
 }
 
-.form__input-group{
-     margin-bottom: 1rem;
+.form__input-group {
+    margin-bottom: 1rem;
 }
-
-.form__input{
+label{
+    font-size: 17px;
+}
+.form__input {
     display: block;
     width: 100%;
     padding: 0.75rem;
@@ -92,21 +104,21 @@ h1{
 
 .form__input:focus {
     border-color: var(--color-primary);
-    background: #c0fff5;
+    background: #d6d6d6;
 }
 
-.form__input--error{
+.form__input--error {
     color: var(--color-error);
     border-color: var(--color-error);
 }
 
-.form__input-error-message{
+.form__input-error-message {
     margin-top: 0.5rem;
     font-size: 0.85rem;
     color: var(--color-error);
 }
 
-.form__button{
+.form__button {
     width: 100%;
     padding: 1rem 2rem;
     font-weight: bold;
@@ -119,24 +131,24 @@ h1{
     background: var(--color-primary);
 }
 
-.form__button:hover{
-    background:var(--color-success);
+.form__button:hover {
+    background: var(--color-success);
 }
 
-.form__button:active{
+.form__button:active {
     transform: scale(0.98);
 }
 
-.form__text{
+.form__text {
     text-align: center;
 }
 
-.form__link{
+.form__link {
     color: var(--color-secondary);
     text-decoration: none;
     cursor: pointer;
 }
 
-.form__link:hover{
+.form__link:hover {
     text-decoration: underline;
 }
